unpackaged/main/default/objects/Meds_Order__c/Meds_Order__c.object-meta.xml
<CustomObject>
    <label>Meds Order</label>
    <nameField>
        <displayFormat>MO-{000000}</displayFormat>
        <label>Meds Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meds Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>