unpackaged/main/default/objects/Meds_Order__c/fields/Card_Charged_if_Required__c.field-meta.xml
<CustomField>
    <fullName>Card_Charged_if_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the patient&#39;s card been charged for the medication?</description>
    <inlineHelpText>Has the patient&#39;s card been charged for the medication?</inlineHelpText>
    <label>Card Charged?</label>
    <type>Checkbox</type>
</CustomField>