unpackaged/main/default/objects/Meds_Order__c/fields/Current_PT_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_PT_Shipping_Address__c</fullName>
    <formula>Patient__r.ShippingStreet &amp; BR() &amp;
Patient__r.ShippingCity &amp; &quot;, &quot; &amp;
Patient__r.ShippingState &amp; &quot; &quot; &amp;
Patient__r.ShippingPostalCode &amp; BR() &amp;
Patient__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current PT Shipping Address</label>
    <type>Text</type>
</CustomField>