unpackaged/main/default/objects/Meds_Order__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Patient&#39;s date of birth</description>
    <inlineHelpText>Patient&#39;s date of birth</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>