unpackaged/main/default/objects/Meds_Order__c/fields/Hold_Meds_Order__c.field-meta.xml
<CustomField>
    <fullName>Hold_Meds_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hold placing the meds order - check that the patient has had a recent blood test first</description>
    <inlineHelpText>Hold placing the meds order - check that the patient has had a recent blood test first</inlineHelpText>
    <label>Hold Meds Order</label>
    <type>Checkbox</type>
</CustomField>