unpackaged/main/default/objects/Meds_Order__c/fields/Medications_to_Order__c.field-meta.xml
<CustomField>
    <fullName>Medications_to_Order__c</fullName>
    <description>Medications to Order</description>
    <inlineHelpText>Medications to Order</inlineHelpText>
    <label>Medications to Order</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medications</valueSetName>
    </valueSet>
</CustomField>