unpackaged/main/default/objects/Meds_Order__c/fields/New_or_Repeat_Order__c.field-meta.xml
<CustomField>
    <fullName>New_or_Repeat_Order__c</fullName>
    <label>New or Repeat Order?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>