unpackaged/main/default/objects/Meds_Order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>The date the medications were ordered</description>
    <inlineHelpText>The date the medications were ordered</inlineHelpText>
    <label>Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>