unpackaged/main/default/objects/Meds_Order__c/fields/Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Notes__c</fullName>
    <label>Order Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>