unpackaged/main/default/objects/Meds_Order__c/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <label>Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual PT Request</fullName>
            </value>
            <value>
                <fullName>Auto Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>