unpackaged/main/default/objects/Meds_Order__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meds Orders</relationshipLabel>
    <relationshipName>Meds_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>