unpackaged/main/default/objects/Meds_Order__c/fields/Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy__c</fullName>
    <label>Pharmacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pharmacies</valueSetName>
    </valueSet>
</CustomField>