unpackaged/main/default/objects/Meds_Order__c/fields/Pharmacy_Order_Placed__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Order_Placed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the order been placed with the pharmacy?</description>
    <inlineHelpText>Has the order been placed with the pharmacy?</inlineHelpText>
    <label>Pharmacy Order Placed?</label>
    <type>Checkbox</type>
</CustomField>