unpackaged/main/default/objects/Meds_Order__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>Patient&#39;s shipping address for the order</description>
    <inlineHelpText>Patient&#39;s shipping address for the order</inlineHelpText>
    <label>New Shipping Address</label>
    <type>TextArea</type>
</CustomField>