unpackaged/main/default/objects/Meds_Order__c/fields/Shipping_Address_County__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_County__c</fullName>
    <label>Shipping Address County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>