unpackaged/main/default/objects/Meds_Order__c/fields/Shipping_Address_PostCode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_PostCode__c</fullName>
    <label>Shipping Address PostCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>