unpackaged/main/default/objects/Meds_Order__c/listViews/Anastrozole_Orders.listView-meta.xml
<ListView>
    <fullName>Anastrozole_Orders</fullName>
    <columns>NAME</columns>
    <columns>Order_Date__c</columns>
    <columns>Patient__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>New_or_Repeat_Order__c</columns>
    <columns>Medications_to_Order__c</columns>
    <columns>Pharmacy_Order_Placed__c</columns>
    <columns>Card_Charged_if_Required__c</columns>
    <columns>Hold_Meds_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Medications_to_Order__c</field>
        <operation>equals</operation>
        <value>Anastrozole</value>
    </filters>
    <filters>
        <field>Order_Source__c</field>
        <operation>equals</operation>
        <value>Manual PT Request</value>
    </filters>
    <label>Anastrozole Orders (Manual PT Request)</label>
</ListView>