unpackaged/main/default/objects/Meds_Order__c/listViews/To_be_ordered.listView-meta.xml
<ListView>
    <fullName>To_be_ordered</fullName>
    <columns>NAME</columns>
    <columns>Order_Date__c</columns>
    <columns>Patient__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>New_or_Repeat_Order__c</columns>
    <columns>Medications_to_Order__c</columns>
    <columns>Pharmacy_Order_Placed__c</columns>
    <columns>Card_Charged_if_Required__c</columns>
    <columns>Hold_Meds_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pharmacy_Order_Placed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>To be ordered</label>
</ListView>